# Lab2-Monopoly

./: CMakeLists.txt
src/: CMakeLists.txt  Field.cpp  Monopoly.cpp  Player.cpp
src/include/: Field.h  Monolopy.h  Player.h
tests/: CMakeLists.txt  Monopoly_test.cpp
